[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
env_logger = "0.10"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17"
